fixed  overflow of elements to wtm section

--- a/iwd-app/src/components/hero-banner/hero.css
+++ b/iwd-app/src/components/hero-banner/hero.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    overflow:hidden;
 }
 .top-row{
     display: flex;
@@ -28,7 +29,6 @@
     margin-right: 45%;
     height: 550px;
     margin-left: 500px;
-    z-index: -1;
 }
 
 .heading-div{
@@ -105,11 +105,13 @@
     justify-content: center;
     background-image: linear-gradient(to right, #946DF0, #E87DB3, #F3B178);
     height: 8%;
-    box-shadow: 5px 7px 4px 0px #FF384A26;
+    box-shadow: 5px 7px 4px 0px #00000026;
     border-radius: 30px;
     margin-top: 30px;
 }
-
+#tickets-btn:hover{
+    cursor: pointer;
+}
 .date-img-div {
     z-index: -1;
     display: flex;
